# ttblue_android

./: .gitmodules
app/: CMakeLists.txt  build.gradle
app/src/androidTest/java/ttblue_android/com/ttblue_android/: ExampleInstrumentedTest.java
app/src/main/: AndroidManifest.xml
app/src/main/cpp/: native-lib.cpp
app/src/main/java/ttblue_android/com/ttblue_android/: AuthService.java  BaseBluetoothService.java  CRCUtil.java  ConvertActivity.java  DeviceInfoService.java  DeviceTypes.java  DevicesAdapter.java  FileDownload.java  FileHandler.java  FileService.java  FileTranferService.java  FileTransferNumber.java  FileTransferType.java  GattActivity.java  MainActivity.java  PromptDialog.java  ScanActivity.java  ServiceCallbacks.java  TtblueApplication.java  UUIDs.java
app/src/main/res/layout/: activity_gatt.xml  activity_main.xml  activity_scan.xml  activity_scan_content.xml  content_main.xml
app/src/main/res/values/: strings.xml
app/src/test/java/ttblue_android/com/ttblue_android/: ExampleUnitTest.java
gradle/wrapper/: gradle-wrapper.properties
